# custom-tools

./: .gitignore  CLAUDE.md  README.md  RELEASE_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.claude/: .mcp.json
.github/workflows/: release.yml
.playwright-mcp/: page-2026-04-03T02-23-08-604Z.yml  page-2026-04-03T02-27-17-299Z.yml
docs/: icon-verification.md  roadmap.md  search-implementation.md  ui-refactor.html
scripts/: generate-icons.cjs
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  watcher.rs
src-tauri/src/commands/: changelog.rs  chat.rs  clipboard.rs  llm.rs  mod.rs  notes.rs  password.rs  search.rs  settings.rs  system.rs  updater.rs  window.rs
src-tauri/src/db/: app_cache.rs  app_usage.rs  mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/llm_provider/: commands.rs  crypto.rs  db.rs  fetcher.rs  mod.rs  models.rs
src-tauri/src/notes/: fs.rs  mod.rs
src-tauri/src/password/: crypto.rs  mod.rs
src-tauri/src/screenshot/: commands.rs  mod.rs  models.rs
src-tauri/src/search/: everything.rs  icon.rs  mod.rs  registry.rs  uwp.rs  watcher.rs
src-tauri/src/settings/: mod.rs  shortcuts.rs
src/components/: ActionMenu.tsx  ChangelogDialog.tsx  Toast.tsx  Tooltip.tsx  TopNavigationBar.tsx  UpdateNotification.tsx
src/constants/: theme.ts  tools.ts  window.ts
src/hooks/: useSearch.ts  useUpdater.ts
src/modules/chat/: ChatView.tsx
src/modules/clipboard/: ClipboardView.tsx  imageCache.ts  index.ts
src/modules/everything/: EverythingView.tsx
src/modules/json_formatter/: JsonExportPreviewModal.tsx  JsonFormatterView.tsx  JsonTreeView.tsx  index.ts  jsonCanvas.ts
src/modules/launcher/: LauncherView.tsx  index.ts  tools.ts
src/modules/markdown/: MarkdownView.tsx  constants.ts  index.ts  types.ts
src/modules/markdown/components/: ContextMenu.tsx  EmptyState.tsx  ErrorBoundary.tsx  MarkdownPreview.tsx  Modal.tsx  NoteTree.tsx  SortableNoteTree.tsx  ToolbarButton.tsx  VditorEditor.tsx  index.ts
src/modules/markdown/hooks/: index.ts  useNotes.ts
src/modules/markdown/styles/: vditor.css
src/modules/markdown/utils/: export.ts
src/modules/password/: PasswordView.tsx  index.ts
src/modules/screenshot/: index.tsx
src/modules/screenshot/overlay/: ScreenshotOverlay.tsx  index.tsx  overlay.css
src/modules/settings/: SettingsView.tsx
src/modules/settings/components/: KeyRecorder.tsx  SettingCard.tsx
src/modules/settings/tabs/: AboutSettings.tsx  AppearanceSettings.tsx  ChangelogSettings.tsx  GeneralSettings.tsx  ManualSettings.tsx  ModelSettings.tsx  SearchSettings.tsx  ShortcutsSettings.tsx
src/stores/: appStore.ts  llmProviderStore.ts  settingsStore.ts  toastStore.ts
src/types/: index.ts
src/utils/: index.ts  tauri.ts
