[package]
name = "custom-tools"
version = "0.1.0"
description = "A Windows productivity tool like uTools"
authors = ["custom"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "custom_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-shell = "2.0.0"
rusqlite = { version = "0.30", features = ["bundled"] }
anyhow = "1.0"
dirs = "5.0"
once_cell = "1.19"
sha2 = "0.10"
tokio = { version = "1.35", features = ["rt", "sync"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
base64 = "0.22"
nucleo = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }
lru = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_DataExchange", "Win32_System_Threading", "Win32_UI_Shell", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_Ole", "Win32_Graphics_Imaging", "Win32_System_Com_StructuredStorage", "Win32_System_Variant"] }
windows-core = { version = "0.52" }
