[package]
name = "custom-tools"
version = "0.1.3"
description = "A Windows productivity tool like uTools"
authors = ["custom"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "custom_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-autostart = "2"
rusqlite = { version = "0.30", features = ["bundled"] }
anyhow = "1.0"
dirs = "5.0"
once_cell = "1.19"
sha2 = "0.10"
tokio = { version = "1.35", features = ["rt", "sync"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand = "0.8"
base64 = "0.22"
nucleo = "0.5"
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }
lru = "0.12"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }
chrono = "0.4"
open = "5.0"
window-vibrancy = "0.7.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-dialog = "2"
rust-pinyin = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_DataExchange", "Win32_System_Threading", "Win32_UI_Shell", "Win32_Storage_FileSystem", "Win32_System_Memory", "Win32_System_LibraryLoader", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_Ole", "Win32_Graphics_Imaging", "Win32_System_Com_StructuredStorage", "Win32_System_Variant", "Win32_UI_Input_KeyboardAndMouse"] }
windows-core = { version = "0.52" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.0"
